src/main/java/Plugin/antlr4/GrammerParser.java
// Generated from ./Grammer.g4 by ANTLR 4.13.1
package Plugin.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrammerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, START_REFERENCE=12, END_REFERENCE=13, START_QUESTION=14, 
		END_QUESTION=15, START_TYPE=16, END_TYPE=17, START_SCORE=18, END_SCORE=19, 
		START_QUESTION_BODY=20, END_QUESTION_BODY=21, START_CORRECT_ANSWER=22, 
		END_CORRECT_ANSWER=23, START_CHOICE=24, END_CHOICE=25, START_VALUE=26, 
		END_VALUE=27, STRING=28, NUMBER=29, REAL_NUMBER=30, INTEGER=31, DATE=32, 
		TIME=33, SCALE=34, BOOLEAN=35, WS=36, COMMENT=37;
	public static final int
		RULE_start = 0, RULE_jobOpeningReference = 1, RULE_question = 2, RULE_score = 3, 
		RULE_questionBody = 4, RULE_choice = 5, RULE_trueFalseQuestion = 6, RULE_trueFalseAnswer = 7, 
		RULE_shortAnswerQuestion = 8, RULE_shortAnswerAnswer = 9, RULE_singleChoiceQuestion = 10, 
		RULE_singleChoiceAnswer = 11, RULE_multipleChoiceQuestion = 12, RULE_multipleChoiceAnswer = 13, 
		RULE_numericalQuestion = 14, RULE_numericalAnswer = 15, RULE_dateQuestion = 16, 
		RULE_dateAnswer = 17, RULE_timeQuestion = 18, RULE_timeAnswer = 19, RULE_numericScaleQuestion = 20, 
		RULE_numericScaleAnswer = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "jobOpeningReference", "question", "score", "questionBody", 
			"choice", "trueFalseQuestion", "trueFalseAnswer", "shortAnswerQuestion", 
			"shortAnswerAnswer", "singleChoiceQuestion", "singleChoiceAnswer", "multipleChoiceQuestion", 
			"multipleChoiceAnswer", "numericalQuestion", "numericalAnswer", "dateQuestion", 
			"dateAnswer", "timeQuestion", "timeAnswer", "numericScaleQuestion", "numericScaleAnswer"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'true-false'", "'short-answer'", "'single-choice'", "'multiple-choice'", 
			"'['", "','", "']'", "'numerical'", "'date'", "'time'", "'numeric-scale'", 
			"'@start-reference@'", "'@end-reference@'", "'@start-question@'", "'@end-question@'", 
			"'@start-type@'", "'@end-type@'", "'@start-score@'", "'@end-score@'", 
			"'@start-question-body@'", "'@end-question-body@'", "'@start-correct-answer@'", 
			"'@end-correct-answer@'", "'@start-choice@'", "'@end-choice@'", "'@start-value@'", 
			"'@end-value@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"START_REFERENCE", "END_REFERENCE", "START_QUESTION", "END_QUESTION", 
			"START_TYPE", "END_TYPE", "START_SCORE", "END_SCORE", "START_QUESTION_BODY", 
			"END_QUESTION_BODY", "START_CORRECT_ANSWER", "END_CORRECT_ANSWER", "START_CHOICE", 
			"END_CHOICE", "START_VALUE", "END_VALUE", "STRING", "NUMBER", "REAL_NUMBER", 
			"INTEGER", "DATE", "TIME", "SCALE", "BOOLEAN", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammer.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public JobOpeningReferenceContext jobOpeningReference() {
			return getRuleContext(JobOpeningReferenceContext.class,0);
		}
		public List<QuestionContext> question() {
			return getRuleContexts(QuestionContext.class);
		}
		public QuestionContext question(int i) {
			return getRuleContext(QuestionContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerVisitor ) return ((GrammerVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			jobOpeningReference();
			setState(46); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(45);
				question();
				}
				}
				setState(48); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==START_QUESTION );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JobOpeningReferenceContext extends ParserRuleContext {
		public TerminalNode START_REFERENCE() { return getToken(GrammerParser.START_REFERENCE, 0); }
		public TerminalNode STRING() { return getToken(GrammerParser.STRING, 0); }
		public TerminalNode END_REFERENCE() { return getToken(GrammerParser.END_REFERENCE, 0); }
		public JobOpeningReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jobOpeningReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).enterJobOpeningReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).exitJobOpeningReference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerVisitor ) return ((GrammerVisitor<? extends T>)visitor).visitJobOpeningReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JobOpeningReferenceContext jobOpeningReference() throws RecognitionException {
		JobOpeningReferenceContext _localctx = new JobOpeningReferenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_jobOpeningReference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(START_REFERENCE);
			setState(51);
			match(STRING);
			setState(52);
			match(END_REFERENCE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContext extends ParserRuleContext {
		public TerminalNode START_QUESTION() { return getToken(GrammerParser.START_QUESTION, 0); }
		public TerminalNode END_QUESTION() { return getToken(GrammerParser.END_QUESTION, 0); }
		public TrueFalseQuestionContext trueFalseQuestion() {
			return getRuleContext(TrueFalseQuestionContext.class,0);
		}
		public ShortAnswerQuestionContext shortAnswerQuestion() {
			return getRuleContext(ShortAnswerQuestionContext.class,0);
		}
		public SingleChoiceQuestionContext singleChoiceQuestion() {
			return getRuleContext(SingleChoiceQuestionContext.class,0);
		}
		public MultipleChoiceQuestionContext multipleChoiceQuestion() {
			return getRuleContext(MultipleChoiceQuestionContext.class,0);
		}
		public NumericalQuestionContext numericalQuestion() {
			return getRuleContext(NumericalQuestionContext.class,0);
		}
		public DateQuestionContext dateQuestion() {
			return getRuleContext(DateQuestionContext.class,0);
		}
		public TimeQuestionContext timeQuestion() {
			return getRuleContext(TimeQuestionContext.class,0);
		}
		public NumericScaleQuestionContext numericScaleQuestion() {
			return getRuleContext(NumericScaleQuestionContext.class,0);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerVisitor ) return ((GrammerVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_question);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(START_QUESTION);
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(55);
				trueFalseQuestion();
				}
				break;
			case 2:
				{
				setState(56);
				shortAnswerQuestion();
				}
				break;
			case 3:
				{
				setState(57);
				singleChoiceQuestion();
				}
				break;
			case 4:
				{
				setState(58);
				multipleChoiceQuestion();
				}
				break;
			case 5:
				{
				setState(59);
				numericalQuestion();
				}
				break;
			case 6:
				{
				setState(60);
				dateQuestion();
				}
				break;
			case 7:
				{
				setState(61);
				timeQuestion();
				}
				break;
			case 8:
				{
				setState(62);
				numericScaleQuestion();
				}
				break;
			}
			setState(65);
			match(END_QUESTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScoreContext extends ParserRuleContext {
		public TerminalNode START_SCORE() { return getToken(GrammerParser.START_SCORE, 0); }
		public TerminalNode NUMBER() { return getToken(GrammerParser.NUMBER, 0); }
		public TerminalNode END_SCORE() { return getToken(GrammerParser.END_SCORE, 0); }
		public ScoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_score; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).enterScore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).exitScore(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerVisitor ) return ((GrammerVisitor<? extends T>)visitor).visitScore(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScoreContext score() throws RecognitionException {
		ScoreContext _localctx = new ScoreContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_score);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(START_SCORE);
			setState(68);
			match(NUMBER);
			setState(69);
			match(END_SCORE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionBodyContext extends ParserRuleContext {
		public TerminalNode START_QUESTION_BODY() { return getToken(GrammerParser.START_QUESTION_BODY, 0); }
		public TerminalNode STRING() { return getToken(GrammerParser.STRING, 0); }
		public TerminalNode END_QUESTION_BODY() { return getToken(GrammerParser.END_QUESTION_BODY, 0); }
		public List<ChoiceContext> choice() {
			return getRuleContexts(ChoiceContext.class);
		}
		public ChoiceContext choice(int i) {
			return getRuleContext(ChoiceContext.class,i);
		}
		public QuestionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).enterQuestionBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).exitQuestionBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerVisitor ) return ((GrammerVisitor<? extends T>)visitor).visitQuestionBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionBodyContext questionBody() throws RecognitionException {
		QuestionBodyContext _localctx = new QuestionBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_questionBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(START_QUESTION_BODY);
			setState(72);
			match(STRING);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==START_CHOICE) {
				{
				{
				setState(73);
				choice();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			match(END_QUESTION_BODY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ChoiceContext extends ParserRuleContext {
		public TerminalNode START_CHOICE() { return getToken(GrammerParser.START_CHOICE, 0); }
		public TerminalNode NUMBER() { return getToken(GrammerParser.NUMBER, 0); }
		public TerminalNode STRING() { return getToken(GrammerParser.STRING, 0); }
		public TerminalNode END_CHOICE() { return getToken(GrammerParser.END_CHOICE, 0); }
		public ChoiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_choice; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).enterChoice(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).exitChoice(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerVisitor ) return ((GrammerVisitor<? extends T>)visitor).visitChoice(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChoiceContext choice() throws RecognitionException {
		ChoiceContext _localctx = new ChoiceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_choice);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(START_CHOICE);
			setState(82);
			match(NUMBER);
			setState(83);
			match(STRING);
			setState(84);
			match(END_CHOICE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TrueFalseQuestionContext extends ParserRuleContext {
		public TerminalNode START_TYPE() { return getToken(GrammerParser.START_TYPE, 0); }
		public TerminalNode END_TYPE() { return getToken(GrammerParser.END_TYPE, 0); }
		public QuestionBodyContext questionBody() {
			return getRuleContext(QuestionBodyContext.class,0);
		}
		public TrueFalseAnswerContext trueFalseAnswer() {
			return getRuleContext(TrueFalseAnswerContext.class,0);
		}
		public TrueFalseQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trueFalseQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).enterTrueFalseQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).exitTrueFalseQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerVisitor ) return ((GrammerVisitor<? extends T>)visitor).visitTrueFalseQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TrueFalseQuestionContext trueFalseQuestion() throws RecognitionException {
		TrueFalseQuestionContext _localctx = new TrueFalseQuestionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_trueFalseQuestion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(START_TYPE);
			setState(87);
			match(T__0);
			setState(88);
			match(END_TYPE);
			setState(89);
			questionBody();
			setState(90);
			trueFalseAnswer();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TrueFalseAnswerContext extends ParserRuleContext {
		public TerminalNode START_CORRECT_ANSWER() { return getToken(GrammerParser.START_CORRECT_ANSWER, 0); }
		public TerminalNode BOOLEAN() { return getToken(GrammerParser.BOOLEAN, 0); }
		public ScoreContext score() {
			return getRuleContext(ScoreContext.class,0);
		}
		public TerminalNode END_CORRECT_ANSWER() { return getToken(GrammerParser.END_CORRECT_ANSWER, 0); }
		public TrueFalseAnswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trueFalseAnswer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).enterTrueFalseAnswer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).exitTrueFalseAnswer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerVisitor ) return ((GrammerVisitor<? extends T>)visitor).visitTrueFalseAnswer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TrueFalseAnswerContext trueFalseAnswer() throws RecognitionException {
		TrueFalseAnswerContext _localctx = new TrueFalseAnswerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_trueFalseAnswer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(START_CORRECT_ANSWER);
			setState(93);
			match(BOOLEAN);
			setState(94);
			score();
			setState(95);
			match(END_CORRECT_ANSWER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShortAnswerQuestionContext extends ParserRuleContext {
		public TerminalNode START_TYPE() { return getToken(GrammerParser.START_TYPE, 0); }
		public TerminalNode END_TYPE() { return getToken(GrammerParser.END_TYPE, 0); }
		public QuestionBodyContext questionBody() {
			return getRuleContext(QuestionBodyContext.class,0);
		}
		public List<ShortAnswerAnswerContext> shortAnswerAnswer() {
			return getRuleContexts(ShortAnswerAnswerContext.class);
		}
		public ShortAnswerAnswerContext shortAnswerAnswer(int i) {
			return getRuleContext(ShortAnswerAnswerContext.class,i);
		}
		public ShortAnswerQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shortAnswerQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).enterShortAnswerQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).exitShortAnswerQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerVisitor ) return ((GrammerVisitor<? extends T>)visitor).visitShortAnswerQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShortAnswerQuestionContext shortAnswerQuestion() throws RecognitionException {
		ShortAnswerQuestionContext _localctx = new ShortAnswerQuestionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_shortAnswerQuestion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(START_TYPE);
			setState(98);
			match(T__1);
			setState(99);
			match(END_TYPE);
			setState(100);
			questionBody();
			setState(102); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(101);
				shortAnswerAnswer();
				}
				}
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==START_CORRECT_ANSWER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShortAnswerAnswerContext extends ParserRuleContext {
		public TerminalNode START_CORRECT_ANSWER() { return getToken(GrammerParser.START_CORRECT_ANSWER, 0); }
		public TerminalNode STRING() { return getToken(GrammerParser.STRING, 0); }
		public ScoreContext score() {
			return getRuleContext(ScoreContext.class,0);
		}
		public TerminalNode END_CORRECT_ANSWER() { return getToken(GrammerParser.END_CORRECT_ANSWER, 0); }
		public ShortAnswerAnswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shortAnswerAnswer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).enterShortAnswerAnswer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).exitShortAnswerAnswer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerVisitor ) return ((GrammerVisitor<? extends T>)visitor).visitShortAnswerAnswer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShortAnswerAnswerContext shortAnswerAnswer() throws RecognitionException {
		ShortAnswerAnswerContext _localctx = new ShortAnswerAnswerContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_shortAnswerAnswer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(START_CORRECT_ANSWER);
			setState(107);
			match(STRING);
			setState(108);
			score();
			setState(109);
			match(END_CORRECT_ANSWER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SingleChoiceQuestionContext extends ParserRuleContext {
		public TerminalNode START_TYPE() { return getToken(GrammerParser.START_TYPE, 0); }
		public TerminalNode END_TYPE() { return getToken(GrammerParser.END_TYPE, 0); }
		public QuestionBodyContext questionBody() {
			return getRuleContext(QuestionBodyContext.class,0);
		}
		public SingleChoiceAnswerContext singleChoiceAnswer() {
			return getRuleContext(SingleChoiceAnswerContext.class,0);
		}
		public SingleChoiceQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleChoiceQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).enterSingleChoiceQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerListener ) ((GrammerListener)listener).exitSingleChoiceQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerVisitor ) return ((GrammerVisitor<? extends T>)visitor).visitSingleChoiceQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleChoiceQuestionContext singleChoiceQuestion() throws RecognitionException {
		SingleChoiceQuestionContext _localctx = new SingleChoiceQuestionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_singleChoiceQuestion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(START_TYPE);
			setState(112);
			match(T__2);
			setState(113);
			match(END_TYPE);
			setState(114);
			questionBody();
			setState(115);
			singleChoiceAnswer();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
